# docproc

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  docproc.cli.yaml  docproc.example.yaml  docproc.yaml  fil  pyproject.toml  shell.nix
.github/workflows/: docker-publish.yml  pypi-publish.yml  release.yml  test.yml
demo/: .env.example  Dockerfile.worker  README.md  design.json  docker-compose-prod.yml  docker-compose.yml  justfile
demo/go/: .air.toml  Dockerfile  go.mod  go.sum  main.go
demo/go/internal/api/: assessments.go  documents.go  flashcards.go  handler.go  notes.go  projects.go  quiz.go
demo/go/internal/blob/: s3.go
demo/go/internal/config/: config.go
demo/go/internal/db/: aiconfig.go  assessments.go  db.go  documents.go  flashcards.go  notes.go  projects.go
demo/go/internal/grade/: grader.go
demo/go/internal/mq/: mq.go
demo/go/internal/rag/: rag.go
demo/go/internal/secure/: secret.go
demo/go/internal/worker/: worker.go
demo/video-assets/: README.md  render_all.sh  scene1_problem.py  scene2_intro.py  scene3_vision.py  scene4_pipeline.py  scene5_architecture.py
demo/web/: .env.example  DESIGN_SPEC.md  Dockerfile  WEB_APP_SPEC.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
demo/web/src/: App.css  App.tsx  index.css  mathlive.d.ts  types.ts
demo/web/src/api/: aiConfig.ts  assessments.ts  client.ts  documents.ts  flashcards.ts  notes.ts  projects.ts  query.ts  quiz.ts  status.ts
demo/web/src/components/: AIActionBar.tsx  AdaptivePanel.tsx  BlockNoteEditor.tsx  BlockSection.tsx  Button.tsx  Card.tsx  ChatConsole.tsx  CommandPalette.tsx  ConfirmModal.tsx  ConverseCanvas.tsx  DocumentThread.tsx  EquationEditorContext.tsx  EquationEditorModal.tsx  FlashcardStudyView.tsx  FlashcardsCanvas.tsx  FlashcardsModule.tsx  GenerateSummaryModal.tsx  InlineEditableTitle.tsx  KnowledgeCanvas.tsx  LatexText.tsx  LayoutShell.tsx  MarkdownNotesEditor.tsx  MarkdownWithMathRenderer.tsx  MarkingSchemeBuilder.tsx  NewProjectModal.tsx  NoteContent.tsx  NotebookLayout.tsx  NotesCanvas.tsx  NotesModule.tsx  ProjectHeaderBar.tsx  ProjectSidebar.tsx  RichTextEditor.tsx  SidebarNavigator.tsx  SlashCommandMenu.tsx  SmartDock.tsx  SoftButton.tsx  SourcesCanvas.tsx  Spinner.tsx  StudyDock.tsx  TestsCanvas.tsx  (+6 more)
demo/web/src/components/canvas/: ConverseCanvas.tsx  FlashcardsCanvas.tsx  KnowledgeCanvas.tsx  NotesCanvas.tsx  SourcesCanvas.tsx  TestsCanvas.tsx
demo/web/src/components/context/: ContextPanel.tsx
demo/web/src/components/dashboard/: DocumentRow.tsx  HomeDashboard.tsx
demo/web/src/components/editor/: BlockMathView.tsx  InlineMathView.tsx  mathExtensions.tsx  notesMathPlugin.ts
demo/web/src/components/layout/: StudyWorkspaceLayout.tsx
demo/web/src/components/shell/: AppShell.tsx  CommandPalette.tsx  (+3 more)
demo/web/src/context/: AIProviderContext.tsx  WorkspaceContext.tsx
demo/web/src/design/: system.ts  theme.ts  tokens.ts
demo/web/src/hooks/: useAnimatedPresenceRoute.ts  useSubmissionPoll.ts
demo/web/src/lib/: aiProviderConfig.ts  chatSessions.ts  confetti.ts  latex.ts  noteContent.ts  sanitize.ts  themeStorage.ts  userPreferences.ts
demo/web/src/views/: AssessmentResultView.tsx  AssessmentSubmissionsView.tsx  AssessmentsListView.tsx  ChatView.tsx  CreateAssessmentView.tsx  FlashcardsView.tsx  LibraryView.tsx  NotebookGuideView.tsx  NotesShell.tsx  NotesView.tsx  OnboardingView.tsx  ProjectWorkspace.tsx  SettingsView.tsx  TakeAssessmentView.tsx  WorkspacesView.tsx
docker/: docproc.compose.azure.yaml  docproc.compose.yaml  docproc.default.yaml
docproc/: __init__.py  constants.py  facade.py  pipeline.py
docproc/api/: __init__.py  app.py  serve.py
docproc/api/routes/: documents.py  models.py  openwebui.py  query.py
docproc/config/: __init__.py  loader.py  schema.py
docproc/doc/: analyzer.py  equations.py  handwriting.py  ollama_utils.py  regions.py  visual.py
docproc/doc/dla/: __init__.py  base.py  layoutlmv3.py
docproc/doc/loaders/: __init__.py  base.py  docx_loader.py  factory.py  pdf_loader.py  pptx_loader.py  xlsx_loader.py
docproc/extractors/: __init__.py  vision_llm.py
docproc/providers/: __init__.py  anthropic_provider.py  azure_provider.py  base.py  factory.py  litellm_provider.py  ollama_provider.py  openai_provider.py
docproc/rag/: __init__.py  base.py  clara_rag.py  embedding_rag.py  factory.py
docproc/refiners/: __init__.py  llm_refine.py
docproc/sanitize/: __init__.py  dedupe.py  llm_input.py  sanitizer.py
docproc/schemas/: __init__.py
docproc/stores/: __init__.py  base.py  chroma_store.py  factory.py  faiss_store.py  memory_store.py  pgvector_store.py  qdrant_store.py
docproc/writer/: __init__.py  csv.py  filewriter.py  json.py  sqlite.py
docs/: ARCHITECTURE.md  ASSESSMENTS_AI.md  AZURE_SETUP.md  CONFIGURATION.md  DOCKER.md  README.md  USAGE.md
examples/: extract_string.py  minimal_from_config.py  minimal_in_memory.py
frontend/: app.py
scripts/: run_frontend.sh
tests/: conftest.py  test_cli.py  test_config.py  test_facade.py  test_loaders.py  test_sanitize.py
(+11 files in other folders)
