[project]
name = "docproc"
version = "2.0.1"
description = "Document Intelligence Platform: vision LLM extraction, LLM refinement (markdown/LaTeX), multi-provider RAG, NotebookLM-style UI."
authors = [{ name = "Rithul Kamesh", email = "hi@rithul.dev" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pymupdf>=1.23.0,<2",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.21",
    "openpyxl>=3.1.0",
    "pillow>=11.1.0,<12",
    "httpx>=0.27",
    "pyyaml>=6.0",
    # Providers — CLI uses same models as server (OpenAI, Azure, Anthropic, Ollama, LiteLLM)
    "litellm>=1.30.0",
    "openai>=1.0",
    "anthropic>=0.18",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "python-multipart>=0.0.6",
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.0",
    "qdrant-client>=1.7",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
    "sqlalchemy>=2.0",
    "sentence-transformers>=2.2",
    "streamlit>=1.28",
]

[project.scripts]
docproc = "docproc.bin.cli:main"
docproc-serve = "docproc.api.serve:main"

[tool.hatch.build.targets.sdist]
include = ["docproc"]

[tool.hatch.build.targets.wheel]
include = ["docproc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
