[project]
name = "docproc"
version = "2.1.1"
description = "Document processor CLI: file in → markdown out. Vision LLM extraction, LLM refinement, multi-provider (OpenAI, Azure, Anthropic, Ollama)."
authors = [{ name = "Rithul Kamesh", email = "hi@rithul.dev" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pymupdf>=1.23.0,<2",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.21",
    "openpyxl>=3.1.0",
    "pillow>=11.1.0,<12",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66",
    "shtab>=1.7",
    # Providers — CLI uses same models as server (OpenAI, Azure, Anthropic, Ollama, LiteLLM)
    "litellm>=1.30.0",
    "openai>=1.0",
    "anthropic>=0.18",
    "sympy>=1.12",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "python-multipart>=0.0.6",
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.0",
    "qdrant-client>=1.7",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
    "sqlalchemy>=2.0",
    "sentence-transformers>=2.2",
    "streamlit>=1.28",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
docproc = "docproc.bin.cli:main"

[tool.hatch.build.targets.sdist]
include = ["docproc"]

[tool.hatch.build.targets.wheel]
include = ["docproc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    "ignore:builtin type .* has no __module__ attribute:DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
